--- a/app.json
+++ b/app.json
@@ -1,14 +1,15 @@
 {
   "expo": {
-    "name": "PlaceApp",
-    "slug": "PlaceApp",
+    "name": "Click Places",
+    "description":"Hey! This is Click Places app.",
+    "slug": "click-places",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/places.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splash_icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#171717"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -17,7 +18,20 @@
       "**/*"
     ],
     "ios": {
+      "bundleIdentifier":"com.rugved.click-places",
+      "buildNumber":"1.0.0",
       "supportsTablet": true
+    },
+    "android": {
+      "package":"com.rugved.click_places",
+      "versionCode":1,
+      "adaptiveIcon": {
+        "foregroundImage":"./assets/places-adaptive.png",
+        "backgroundColor": "#171717"
+      },
+      "permissions": [
+        "ACCESS_FINE_LOCATION","CAMERA","WRITE_EXTERNAL_STORAGE"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
